# pg-lock-tracer

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  requirements_dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql.yml  integration_tests.yaml  integration_tests.yml  pr-handling.yml  pr_handling.yml  python_publish.yaml  python_publish.yml  stale.yml  tests.yaml  tests.yml
examples/: create_table_trace.html  create_table_trace.json
src/pg_lock_tracer/: animate_lock_graph.py  helper.py  oid_resolver.py  pg_lock_tracer.py  pg_lw_lock_tracer.py  pg_row_lock_tracer.py  pg_spinlock_delay_tracer.py
src/pg_lock_tracer/.github/workflows/: tests.yaml
src/pg_lock_tracer/bpf/: pg_lock_tracer.c  pg_lw_lock_tracer.c  pg_row_lock_tracer.c  pg_spinlock_delay_tracer.c
tests/: test_helper.py
