[metadata]
name = pg_lock_tracer
version = attr: pg_lock_tracer.__version__
description = A BPF based lock tracer for the PostgreSQL database
long_description = file: README.md
long_description_content_type = text/markdown
author = Jan Nidzwetzki
url = https://github.com/jnidzwetzki/pg-lock-tracer
project_urls =
    Bug Tracker = https://github.com/jnidzwetzki/pg-lock-tracer/issues
keywords = postgresql bpf lock locktracer

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Software Development :: Debuggers
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

install_requires =
  graphviz
  igraph
  prettytable
  psycopg2

# In order to be able to execute 'python setup.py test'
[aliases]
test = pytest

[tool:pytest]
testpaths = tests/
addopts =
    --verbose
    --ignore-glob='**/_*.py'

[options.packages.find]
where = src

[options.package_data]
pg_lock_tracer.bpf =
    *.c

[options.entry_points]
console_scripts =
    pg_lock_tracer = pg_lock_tracer.pg_lock_tracer:main
    pg_lw_lock_tracer = pg_lock_tracer.pg_lw_lock_tracer:main
    animate_lock_graph = pg_lock_tracer.animate_lock_graph:main


